// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`mapIsolationLevel should default to majority concern for undefined 1`] = `
{
  "readConcern": {
    "level": "majority",
  },
  "writeConcern": {
    "w": "majority",
  },
}
`;

exports[`mapIsolationLevel should default to majority concern when no isolation level specified 1`] = `
{
  "readConcern": {
    "level": "majority",
  },
  "writeConcern": {
    "w": "majority",
  },
}
`;

exports[`mapIsolationLevel should return majority concern for READ COMMITTED 1`] = `
{
  "readConcern": {
    "level": "majority",
  },
  "writeConcern": {
    "w": "majority",
  },
}
`;

exports[`mapIsolationLevel should return snapshot concern for REPEATABLE READ 1`] = `
{
  "readConcern": {
    "level": "snapshot",
  },
  "writeConcern": {
    "w": "majority",
  },
}
`;

exports[`mapIsolationLevel should return snapshot concern for SERIALIZABLE 1`] = `
{
  "readConcern": {
    "level": "snapshot",
  },
  "writeConcern": {
    "w": "majority",
  },
}
`;
